# covid

./: Cargo.toml
output/: 2020-03-20T09:41:11.toml  2020-03-21T15:09:15.toml  2020-03-22T09:12:17.toml
output/2020.03.19/: report.toml
output/2020.03.22/: 15:47:00.toml  report.toml
output/2020.03.29/: report.toml
src/: main.rs  models.rs
