[package]
name = "covid"
version = "0.1.0"
authors = ["Robert Masen <robert.masen@smartthings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"]}
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.9"
lettre_email = "0.9"